removed files. edits to scripts
removed 'am' from schedout part of convert_abstract_to_tex.pl. Also
added a '\newpage' print to the end so that the abstracts section
starts on a newpage.

--- a/webmanual/cdogs_webmanual.tex
+++ b/webmanual/cdogs_webmanual.tex
@@ -222,5 +222,22 @@ Steps to open Abstract submission:
 
 \section{Booklet Creation}
 
+The proceedings booklet is created by combining the various required
+templates with the output from the \verb|convert_abstract_to_tex.pl|
+script. This is currently a mostly manual process, and involves some
+cutting in pasting in the correct order, with manual update of page
+numbers at the end. The steps involved will be detailed here.
+
+The four files needed to create the booklet are located in
+\verb|$CDOGS/scripts|, and are:
+\begin{itemize}
+\item \verb|cdogs_abstract_tex_template_book_top|
+\item \verb|cdogs_abstract_tex_template_book_bottom|
+\item \verb|booklet_sched_part.tex|
+\item \verb|booklet_abs_part.tex|
+\end{itemize}
+
+
+
 \end{document}
 
