change cdogs_logo.jpg to .pdf in book template

--- a/webmanual/cdogs_webmanual.tex
+++ b/webmanual/cdogs_webmanual.tex
@@ -238,7 +238,7 @@ The four files needed to create the booklet are:
 \item \verb|$CDOGS/scripts/booklet_abs_part.tex|
 \end{itemize}
 
-
+Once all the abstracts
 
 \end{document}
 
